--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+$base-color: #355e3b;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
@@ -998,4 +998,9 @@ footer {
         }
     }
 
+}
+
+.custom-project-image {
+    height: 300px;
+    width: 300px;
 }
